Edit: Button alignment fixed

--- a/main.css
+++ b/main.css
@@ -14,11 +14,10 @@
     line-height: 10px;
 }
 
-
 .btn{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .learn__more, .register {
@@ -26,8 +25,8 @@
     outline: none;
     border: none;
     cursor: pointer;
-    margin: 1rem 1rem; 
-    border-radius: 4px;
+    margin: 1rem 1rem 1rem 0rem; 
+    border-radius: 5px;
     font-weight: 600;
 }
 
@@ -152,6 +151,10 @@
 }
 
 .card{
+    display: flex;
+    flex-direction: column;
+    /* align-items: flex-start; */
+
     border: 1px solid  #EFEEF0;
     border-radius: 10px;
     padding: 2rem 0rem;
@@ -159,6 +162,7 @@
 
 .card > .btn{
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
