--- a/theme.css
+++ b/theme.css
@@ -7,6 +7,10 @@ body{
     margin: 0 auto;
 }
 
+/* h1{
+    font-family: 'Open Sans', sans-serif;
+} */
+
 button{
     cursor: pointer;
 }
